--- a/styles.css
+++ b/styles.css
@@ -1,30 +1,30 @@
 @import url(https://fonts.googleapis.com/css2?family=Cookie&family=Pacifico&family=Parisienne&display=swap);
 
-body * {
+html { 
+  background: url("./images/petya-back-oils - Copy.png") no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+
+.main > div {
   box-sizing: border-box;
   margin: 0 auto;
   padding: 0px;
   font-style: italic;    
   font-stretch: narrower;
-  color: white;
-  height: 100%;
+  color: white;  
   width: 100%;
   max-width: 500px;
   align-items: center;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
-.page-1,
-.page-2,
-.page-3,
-.page-4 {
-  background-image: url("./images/petya-back-oils - Copy.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100%;
-}
+
 
 .hidden {
   display: none;
@@ -33,28 +33,54 @@ body * {
 .inviteText,
 .anibobi {
   text-align: center;
-  font-size: 22px;
-  line-height: 1.8;
-  margin: 20px 0;
+  font-size: 22px; 
+ 
   font-weight: bold;
   text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
 }
 
-h2 {
-  text-align: center;
+
+.us {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
   margin-top: -73px;
-  font-size: 22px;
-  line-height: 2.5;
+  font-weight: bold;
+}
+h2 {  
+  font-size: 22px;  
   letter-spacing: 1.2px;
   text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
-  font-weight: bold;
+  line-height: 2;
+}
+.mainInvite  { 
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.detailsText {
-  text-align: center;
-  margin-top: -34px;
+.detailsText2 {
+  margin-top: 50px;
+  text-align: center; 
   font-size: 24px;
-  line-height: 2;
+  line-height: 2.5;
+  font-weight: bold;
+  text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
+}
+
+.detailsText3{
+  text-align: center;
+  margin-top: -60px;
+  font-size: 24px;
+  line-height: 2.5;
+  font-weight: bold;
+  text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
+}
+
+.detailsText4{
+  text-align: center;
+  margin-top: 20px;
+  font-size: 24px;
+  line-height: 2.5;
   font-weight: bold;
   text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
 }
