--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,7 @@ html {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  width: 100%;
 }
 
 
@@ -48,6 +49,7 @@ html {
   font-weight: bold;
 }
 h2 {  
+  text-align: center;
   font-size: 22px;  
   letter-spacing: 1.2px;
   text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
@@ -69,18 +71,18 @@ h2 {
 
 .detailsText3{
   text-align: center;
-  margin-top: -60px;
+  margin-top: -65px;
   font-size: 24px;
-  line-height: 2.5;
+  line-height: 2;
   font-weight: bold;
   text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
 }
 
 .detailsText4{
   text-align: center;
-  margin-top: 20px;
+  margin-top: 10px;
   font-size: 24px;
-  line-height: 2.5;
+  line-height: 2.2;
   font-weight: bold;
   text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
 }
