--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,29 @@
+
 @import url(https://fonts.googleapis.com/css2?family=Cookie&family=Pacifico&family=Parisienne&display=swap);
 
-@font-face {
-  font-family: 'MyWebFont'; 
-  src: url('/CyrillicRibbon.ttf')  format('truetype'), /* Safari, Android, iOS */      
-}
+body * {
 
-
-html { 
-  background: url("./images/petya-back-oils - Copy.png") no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
- 
-}
-
-
-.main > div {
   box-sizing: border-box;
   margin: 0;
   padding: 0px;
+  font-style: italic;
+  font-stretch: narrower;
+  color: white;
+  height: 100%;
+  width: 100%;
+  max-width: 500px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.main {
+  box-sizing: border-box;  
+  background-image: url("./images/petya-back-oils - Copy.png");  
+  background-position:center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
   font-family: 'MyWebFont', arial, sans-serif; 
   font-style: italic;    
   font-stretch: narrower;
@@ -31,47 +35,43 @@ html {
   justify-content: space-between;
 }
 
-
-
 .hidden {
+
   display: none;
-}
 
-.inviteText,
-.anibobi {
-  text-align: center;
-  font-size: 22px; 
- 
-  font-weight: bold;
-  text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
 }
-
 
 .us {
   display:flex;
   flex-direction: column;
   align-items: center;
-  margin-top: -73px;
-  font-weight: bold;
+  margin-top: -58px;
 }
+
 h2 {  
   text-align: center;
-  font-size: 22px;  
+  font-size: 20px;  
   letter-spacing: 1.2px;
   text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
   line-height: 2;
 }
-.mainInvite  { 
+.mainInvite, .gergovi  { 
   margin-top: 20px;
   margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  text-align: center;
+  font-size: 22px;   
+  text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
 }
 
 .detailsText2 {
-  margin-top: 50px;
+  margin-top: -16px;
   text-align: center; 
   font-size: 24px;
   line-height: 2.5;
-  font-weight: bold;
+ 
   text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
 }
 
@@ -80,16 +80,16 @@ h2 {
   margin-top: -65px;
   font-size: 24px;
   line-height: 2;
-  font-weight: bold;
+ 
+  
   text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
 }
 
 .detailsText4{
   text-align: center;
-  margin-top: 10px;
+  margin-top: -16px;
   font-size: 24px;
   line-height: 2.2;
-  font-weight: bold;
   text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
 }
 
@@ -98,10 +98,14 @@ h2 {
   text-align: center;
   font-size: 20px;
   line-height: 1.3;
-  font-weight: bold;
+  
   text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
 }
 
+p {
+  margin-top: 13px;
+  margin-bottom: 13px;
+}
 script {
   display: none;
 }
