--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ h2 {
 }
 .mainInvite, .gergovi  { 
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -70,8 +70,7 @@ h2 {
   margin-top: -16px;
   text-align: center; 
   font-size: 24px;
-  line-height: 2.5;
- 
+  line-height: 2.5; 
   text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
 }
 
@@ -79,9 +78,7 @@ h2 {
   text-align: center;
   margin-top: -65px;
   font-size: 24px;
-  line-height: 2;
- 
-  
+  line-height: 2;  
   text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
 }
 
@@ -94,10 +91,10 @@ h2 {
 }
 
 .molba {
-  margin-top: 30px;
+ 
   text-align: center;
   font-size: 20px;
-  line-height: 1.3;
+  line-height: 1.7;
   
   text-shadow: 1.5px 1px rgba(0, 0, 0, 0.87);
 }
@@ -111,6 +108,11 @@ script {
 }
 
 a {
-  margin: 10px 0;
+  margin: 10px 0 35px 0;
   text-align: center;
+}
+
+
+.newrow {
+  margin-top: 20px;
 }
